Fixerd all but the Who Am I? layout issues

--- a/core/core/static/main.css
+++ b/core/core/static/main.css
@@ -55,12 +55,11 @@
 }
 
 .about-me {
-    position: relative;
+    /* position: relative;
     height: 100%;
     max-height: 400px;
-    width:100%;
+    width:100%; */
     
-    box-shadow: 0 0 1px 1px grey;
 }
 
 .glass-bg {
@@ -81,24 +80,23 @@
     height:500px;
 }
 
-.skill-section .leftCol {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+.leftCol {
+    /* height: 100%;
+    top: 50%; */
+    /* -ms-transform: translateY(-50%);
+    transform: translateY(-50%); */
 }
 
-.skill-section .am-block {
-    height: 250px;
-    width: 300px;
-    margin-left: 100px;
+.am-block {
+    /* max-height: 250px;*/
+    /* height:100%; */
 }
 
 body {
     /* background: rgb(255,255,255); */
     font-family: 'Roboto', sans-serif;
     background-color: whitesmoke;
+    /* height:95vh; */
     /* background: radial-gradient(circle, rgba(255,255,255,1) 50%, rgba(204,204,217,1) 100%); */
     /* background: radial-gradient(circle, rgba(24,13,38,1) 50%, rgba(24,13,38,1) 100%); */
     overflow-y: scroll;    
@@ -107,36 +105,13 @@ body {
 
 
 .nav {
-    height: 5vh;
+    height: 50px;
     box-shadow: 0 4px 20px -20px whitesmoke inset !important;
 } 
 
 .bLine {
     padding-bottom: 40px;
     /* border-bottom: 1px solid #565c75; */
-}
-
-.notifyBox {
-    background-color: rgba(204,204,217,1);
-    margin: auto;
-    margin-top: 200px;
-    width: 50%;
-    height: 30%;
-    box-shadow: 1px 3px 3px #565c75;
-    padding: 50px;
-}
-
-.notifyBox > h2 {
-    color: #292a30;
-}
-
-.bottomBorder {
-    position: fixed;
-    bottom: 0px;
-    height: 50px;
-    width: 100%;
-    box-shadow:  0 20px 30px -20px whitesmoke inset;
-    background-color: #565c75;
 }
 
 
